--- a/HTMLcodigo.html
+++ b/HTMLcodigo.html
@@ -1,12 +1,12 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>The MuffinCrew</title>
   </head>
-  <body>
+  <bod>
     <div class="">
-      Hola mundo
+      Hola mundo , esta es nuestra gran Pastelerias
     </div>
   </body>
 </html>
